# NLP-assignments

./: .gitignore  README.md
Assignment_1/: README.md  evaluation.py  load_data.py  logistic_regression.py  main.py  models.py  preprocess_data.py  pyproject.toml  svm.py  test.py  things_to_remove.txt
Assignment_1/misclassified/: Logistic Regression_misclassified.csv  Support Vector Machine_misclassified.csv
Assignment_2/: README.md  data_visualisation.py  evaluation.py  load_data.py  main.py  models.py  preprocess_data.py  pyproject.toml  utils.py
Assignment_2/misclassified/: CNN-Dropout-0.3_misclassified.csv  CNN-Dropout-0_misclassified.csv  LSTM-Dropout-0.3_misclassified.csv  LSTM-Dropout-0_misclassified.csv
Assignment_3/: README.md  evaluation.py  load_data.py  main.py  models.py  preprocess_data.py  pyproject.toml  tokenization.py  utils.py
Assignment_3/misclassified/: Transformer-Headline-0.25_misclassified.csv  Transformer-Headline-0.75_misclassified.csv  Transformer-Headline-1.0_misclassified.csv  Transformer-HeadlineDesc-0.25_misclassified.csv  Transformer-HeadlineDesc-0.75_misclassified.csv  Transformer-HeadlineDesc-1.0_misclassified.csv
