[project]
name = "assignment-2"
version = "0.1.0"
description = "Project for Assignment 2 of the Natural Language Processing (NLP) course."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
]
