[project]
name = "assignment-3"
version = "0.1.0"
description = "Project for Assignment 3 of the Natural Language Processing (NLP) course."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.2",
    "matplotlib>=3.10.8",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
